retrieveUnpackaged/objects/US_Activation_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activation Requests</relationshipLabel>
        <relationshipName>Activation_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ActivationReqApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set true, when activation request is approved and further used to create new Call Summary record</description>
        <label>ActivationReqApproved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ActivationReqRejected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set true when Activation request is rejected</description>
        <label>ActivationReqRejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activation_Date_Time__c</fullName>
        <label>Activation Date/Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Activation_Goals__c</fullName>
        <label>Activation Goals</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Activation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activation</label>
        <referenceTo>HE_Call_Summary__c</referenceTo>
        <relationshipLabel>Activation Requests</relationshipLabel>
        <relationshipName>Activation_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approver_can_Reschedule__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>OK for Approver to call customer to reschedule directly</inlineHelpText>
        <label>Approver can Reschedule?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activation_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>155</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Activation Requests</relationshipLabel>
        <relationshipName>Activation_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Spend__c</fullName>
        <label>Estimated Spend</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <label>Package</label>
        <length>155</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Activation Request</label>
    <nameField>
        <displayFormat>ACTR-{000000}</displayFormat>
        <label>Activation Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activation Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>